# config

./: .gitignore  .nixd.json  Makefile  README.md  flake.nix  statix.toml
condom/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  flake.nix
condom/modules/: condom.nix
condom/src/: lib.rs  main.rs
condom/src/app/: cli.rs  debug.rs  doctor.rs  env.rs  mod.rs  runtime.rs  shims.rs
condom/src/app/helper/: mod.rs  probe.rs  protocol.rs  request.rs  sandbox.rs
condom/src/auth/: approvals.rs  credentials.rs  filesystem.rs  mod.rs  prompt.rs  redacted.rs
condom/src/kernel/: capabilities.rs  mod.rs  seccomp.rs
condom/src/model/: config.rs  events.rs  mod.rs  policy.rs  policy_pattern.rs  project.rs  runtime_support.rs  state.rs
condom/src/net/: mod.rs  tproxy.rs
condom/src/net/proxy/: cache.rs  mod.rs  server.rs  transparent.rs
condom/src/sandbox/: capture.rs  fence.rs  mod.rs
condom/src/sandbox/landlock/: mediate.rs  mod.rs  syscall.rs  wrap.rs
condom/src/sandbox/review/: diff.rs  journal.rs  mod.rs  tui.rs
condom/tests/: cli_smoke.rs
dotfiles/: stignore-global  xmodmap
hardware/: nuphy_air75_v2.layout.json
home/: .gitignore
home-manager/: apps.nix  colors.nix  default.nix  gtk.nix  mime.nix  utilities.nix  xresources.nix
modules/: audio.nix  base.nix  bluetooth.nix  fonts.nix  hyprland.nix  ld.nix  llm.nix  virtualisation.nix  xorg.nix
navi/: docker.cheat  docs.cheat  git.cheat  go.cheat  linux.cheat  nix.cheat  project-setup.cheat  syncthing.cheat  system.cheat  workflow.cheat
overlays/: default.nix
roles/: battlestation.nix  (+1 more)
(+763 files in other folders)
