[package]
name = "condom"
version = "0.1.0"
edition = "2021"
description = "Linux-first developer safety wrapper"

[[bin]]
name = "condom"
path = "src/main.rs"

[[bin]]
name = "condom-helper"
path = "src/bin/condom-helper.rs"

[[bin]]
name = "condom-approval"
path = "src/bin/condom-approval.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
fltk = { version = "1.5", features = ["fltk-bundled", "no-pango"] }
libc = "0.2"
ratatui = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
toml = "0.8"
uuid = { version = "1.10", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.12"
